--- a/SpecsProject/.classpath
+++ b/SpecsProject/.classpath
@@ -11,14 +11,15 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry kind="lib" path="src/rs2xml.jar"/>
-	<classpathentry kind="lib" path="sqlite-jdbc-3.8.11.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/Jars/jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="src/Jars/jgoodies-forms-1.8.0.jar"/>
+	<classpathentry kind="lib" path="src/Jars/miglayout15-swing.jar"/>
+	<classpathentry kind="lib" path="src/Jars/sqlite-jdbc-3.8.11.2.jar"/>
+	<classpathentry kind="lib" path="src/Jars/rs2xml.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
