--- a/SpecsProject/pom.xml
+++ b/SpecsProject/pom.xml
@@ -35,5 +35,10 @@
   		<artifactId>poi-ooxml</artifactId>
   		<version>3.10-FINAL</version>
   	</dependency>
+  	<dependency>
+  		<groupId>joda-time</groupId>
+ 		 <artifactId>joda-time</artifactId>
+  		<version>2.9.2</version>
+	</dependency>
   </dependencies>
 </project>
