--- a/SpecsProject/.classpath
+++ b/SpecsProject/.classpath
@@ -21,5 +21,11 @@
 	<classpathentry kind="lib" path="src/Jars/miglayout15-swing.jar"/>
 	<classpathentry kind="lib" path="src/Jars/sqlite-jdbc-3.8.11.2.jar"/>
 	<classpathentry kind="lib" path="src/Jars/rs2xml.jar"/>
+	<classpathentry kind="lib" path="src/Jars/binding-1.0.jar"/>
+	<classpathentry kind="lib" path="src/Jars/forms-1.0.5.jar"/>
+	<classpathentry kind="lib" path="src/Jars/looks-1.2.2.jar"/>
+	<classpathentry kind="lib" path="src/Jars/looks-win-1.2.0.jar"/>
+	<classpathentry kind="lib" path="src/Jars/plastic-1.2.0.jar"/>
+	<classpathentry kind="lib" path="src/Jars/jtoaster-1.0.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
