--- a/SpecsProject/pom.xml
+++ b/SpecsProject/pom.xml
@@ -40,5 +40,10 @@
  		 <artifactId>joda-time</artifactId>
   		<version>2.9.2</version>
 	</dependency>
+  	<dependency>
+  		<groupId>org.apache.pdfbox</groupId>
+  		<artifactId>pdfbox</artifactId>
+  		<version>2.0.0-RC3</version>
+  	</dependency>
   </dependencies>
 </project>
