--- a/SpecsProject/.classpath
+++ b/SpecsProject/.classpath
@@ -28,5 +28,6 @@
 	<classpathentry kind="lib" path="src/Jars/looks-win-1.2.0.jar"/>
 	<classpathentry kind="lib" path="src/Jars/plastic-1.2.0.jar"/>
 	<classpathentry kind="lib" path="src/Jars/jtoaster-1.0.5.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
